# XYZ-Renderer

./: CMakeLists.txt  LICENSE  README.md
Shaders/default/: default.fragment  default.vertex
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw-3.4/: CMakeLists.txt
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Model.cpp  Model.h  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
